Bug fix #2349

Outliner click on mesh in screen without 3d window crashed. NULL pointer!